dci-2.0/src/app/compare/compare.component.scss
.alt-row {
    border: 5px solid #000000!important;
}

.container {
    width: 100%;
    padding: 0px;
    margin: 0px;
    flex-direction: row;
    flex-wrap: none;
    justify-content: center;
    align-items: stretch;
    align-content: stretch;
    div.left {
        width: 40%;
        float: left;
        overflow: scroll;
        height: 100vh;
    }
    div.right {
        width: 60%;
        float: right;
        overflow: scroll;
        height: 100vh;
    }
    table.comparison {
        width: 100%;
        td {
            vertical-align: top;
            border: 5px solid #fff;
            transition: all 0.2s;
            padding: 20px;
            overflow: hidden;
            // height: initial;
            transition: all 0.2s;
            &.selected {
                border: 5px solid #ff22ee;
                height: 700px;
                overflow: scroll;
            }
            width: 25%;
            // border-bottom: 10px solid #fefefe;
            // border-right: 10px solid #fefefe;
            .apptitle {
                height: 70px;
                padding-top: 10px;
                position: relative;
                padding-left: 80px;
                img {
                    position: absolute;
                    left: 10px;
                    top: 10px;
                    width: 50px;
                }
                .title {
                    font-weight: bold;
                }
                .publisher {
                    font-size: 70%;
                    // font-variant: 
                }
            }
            .appdesc {
                max-width: 100%;
                padding: 20px 0px;
                .summmary {
                    padding: 28px 0px 5px 0px;
                }
                .desc {
                    font-style: italic;
                    justify-content: space-around;
                    padding: 10px 0px 0px 0px;
                    ;
                    font-size: 85%;
                }
            }
            div.appswap {
                width: 100%;
                text-align: center;
                button {
                    background-color: #ff22ee !important;
                    color: white;
                    font-size: 14pt !important;
                    border: 0px solid #000;
                    padding: 8px 20px;
                    border-radius: 3px;
                }
            }
        }
    }
    /*
    .comparison {
        border-right: 1px solid #eee;
        padding: 50px  20px;
        flex-basis: 33%;
        flex-grow: 1.0;
    }
    .title {
        position: relative;
        padding-left: 60px;
        img {
            position: absolute;
            left: 0px;
            top: 20px;
            width: 50px;
        }
    }
    */
}

